# eve_industry_tool

./: .gitignore  .pre-commit-config.yaml  ROADMAP.md  TUTORIAL.md  eve_api.py  eve_constants.py  main.py  plan.md  pyproject.toml
src/: eve_api.py
tests/: test_eve_api.py
